--- a/tnqvm/visitors/itensor/mps/tests/CMakeLists.txt
+++ b/tnqvm/visitors/itensor/mps/tests/CMakeLists.txt
@@ -1,2 +1,9 @@
+find_package(GTest REQUIRED)
+
 add_xacc_test(ITensorMPSVisitor)
-target_link_libraries(ITensorMPSVisitorTester tnqvm-itensor)
+#find_package(GTest)
+include_directories(${GTEST_INCLUDE_DIRS})
+#target_link_libraries(ITensorMPSVisitorTester tnqvm-itensor)
+
+target_link_libraries(ITensorMPSVisitorTester tnqvm-itensor GTest::GTest GTest::Main)
+#target_link_libraries(ITensorMPSVisitorTester PRIVATE GTest::GTest GTest::Main)
